<resources>
    <string name="app_name">UrbanNoise</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_location">MyLocation</string>
    <string name="latitude_text_view">Latitude</string>
    <string name="longitude_text_view">Longitude</string>
    <string name="current_location_button">Get Current Location</string>
    <string name="record_sound_button">Record Sound</string>
    <string name="get_device_id_button">Get Device ID</string>
    <string name="go_to_map_button">Go To Map</string>
    <string name="start_urban_noise_detection_button">Start Urban Noise Detection</string>
    <string name="fusion_table_button">Test Fusion Table Access</string>

    <string name="start_record_button">Start Recording</string>
    <string name="stop_record_button">Stop Recording</string>
    <string name="start_play_button">Start Playing</string>
    <string name="stop_play_button">Stop Playing</string>

    <string name="google_api_key">AIzaSyC7lS2fQyY3lo7a66cMeHJWgznoa-TFMdg</string>
    
    <integer name="google_play_services_version">8115000</integer>
    <string name="title_activity_sound_recorder">SoundRecorder</string>
    <string name="title_activity_sound_recording">SoundRecordingActivity</string>

    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">This application requires the use of GPS and Network for location detect. Please go to Settings and enable Location and Network usage.</string>
    <string name="open_location_settings">Go to Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_map">MyMapActivity</string>
    <string name="title_activity_urban_noise">UrbanNoiseActivity</string>

    <string name="table_date_header">Date</string>
    <string name="table_location_header">Location</string>
    <string name="table_dbm_header">dBm Level</string>
    <string name="table_device_header">Device ID</string>
</resources>
