<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sound_recording"
    tools:context="com.example.sphan.urbannoise.SoundRecordingActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_record_button"
        android:id="@+id/start_record_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:onClick="startRecording" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_record_button"
        android:id="@+id/stop_record_button"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/start_record_button"
        android:layout_centerHorizontal="true"
        android:onClick="stopRecording" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_play_button"
        android:id="@+id/start_play_button"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/stop_record_button"
        android:layout_centerHorizontal="true"
        android:onClick="startPlaying" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_play_button"
        android:id="@+id/stop_play_button"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/start_play_button"
        android:layout_centerHorizontal="true"
        android:onClick="stopPlaying" />
</RelativeLayout>
