<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_urban_noise"
    tools:context="com.example.sphan.urbannoise.UrbanNoiseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/table_date_header"
            android:textStyle="bold"
            android:padding="@dimen/table_padding"
            android:background="@drawable/table_border"
            android:layout_weight="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/table_location_header"
            android:padding="@dimen/table_padding"
            android:background="@drawable/table_border"
            android:textStyle="bold"
            android:layout_weight="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/table_dbm_header"
            android:padding="@dimen/table_padding"
            android:background="@drawable/table_border"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/table_device_header"-->
            <!--android:padding="@dimen/table_padding"-->
            <!--android:background="@drawable/table_border"-->
            <!--android:layout_weight="2"-->
            <!--android:textStyle="bold"/>-->
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="650px"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/dataTable" >


        </LinearLayout>
    </ScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Detection"
        android:id="@+id/start_button"
        android:layout_alignTop="@+id/end_button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Detection"
        android:id="@+id/end_button"
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp"
        android:layout_below="@+id/scrollView"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View in Map"
        android:id="@+id/viewInMapButton"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/start_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
